Fix SPA refresh routing